Fixed images not hiding when screen is too small

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -116,8 +116,8 @@ nav {
     }
 }
 
-@media only screen and (max-width: 1250px) {
+@media (max-width: 1250px) {
     .card > img {
-        display: none;
+        display: none !important;
     }
 }
